--- a/src/components/Cart/style.css
+++ b/src/components/Cart/style.css
@@ -1,4 +1,4 @@
-.cart-box {
+.cart-container {
   width: 100%;
   height: 100vh;
   display: flex;
@@ -7,15 +7,15 @@
   z-index: 2;
 }
 
-.cart-empyt-box {
+.cart-left-container {
   background-color: rgba(0, 0, 0, 0.5);
   flex: 1;
 }
 
-.cart-main-box {
+.cart-right-container {
   width: 400px;
   height: 100vh;
-  background-color: white;
+  background-color: var(--background-primary);
   position: fixed;
   top: 0%;
   right: 0%;
@@ -25,24 +25,29 @@
   z-index: 2;
 }
 
-.show-cart-box {
+[data-theme='dark'] .cart-right-container {
+  box-shadow: var(--shadow-primary);
+}
+
+.show-cart {
   transform: translateX(0%);
 }
 
-.cart-first-box {
+.cart-header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 1px solid #e8e8e1;
+  border-bottom: 1px solid var(--border-primary);
   padding-bottom: 20px;
 }
 
-.cart-first-box > h2 {
-  font-size: 25px;
+.cart-header > h2 {
+  font-size: 1.563rem;
   font-weight: 400;
+  color: var(--text-primary);
 }
 
-.cart-second-box {
+.cart-product-container {
   height: 70%;
   display: flex;
   flex-direction: column;
@@ -50,53 +55,64 @@
   overflow-y: scroll;
 }
 
-.cart-second-box::-webkit-scrollbar {
+.cart-product-container::-webkit-scrollbar {
   width: 8px;
 }
 
 /* Track */
-.cart-second-box::-webkit-scrollbar-track {
+.cart-product-container::-webkit-scrollbar-track {
   background: #f1f1f1;
 }
 
 /* Handle */
-.cart-second-box::-webkit-scrollbar-thumb {
+.cart-product-container::-webkit-scrollbar-thumb {
   background: #888;
 }
-.cart-second-box::-webkit-scrollbar-thumb:hover {
+.cart-product-container::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
 
-.cart-image-product-details {
+.cart-product-details {
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
   padding: 10px 0px;
 }
 
-.cart-image-product-details > img {
+.cart-product-left > img {
   width: 120px;
   object-fit: contain;
 }
 
-.cart-product-details {
+.cart-product-right {
   flex: 1;
   margin-left: 20px;
 }
 
-.cart-product-details > a > h3 {
-  font-size: 17px;
-  font-weight: 400;
-  margin-bottom: 5px;
+.cart-product-right > a {
+  color: var(--text-primary);
 }
 
-.cart-product-details > h4 {
-  font-size: 15px;
+.cart-product-right > a > h3 {
+  font-size: 1.063rem;
   font-weight: 400;
+  margin-bottom: 5px;
+  color: var(--text-primary);
+}
+
+.cart-product-size,
+.cart-product-selling-price {
   margin-bottom: 10px;
 }
 
-.cart-icons-div {
+.cart-product-size > span,
+.cart-product-selling-price > span {
+  font-size: 0.938rem;
+  font-weight: 400;
+  color: var(--text-primary);
+}
+
+.cart-icons-container {
   width: 100%;
   display: flex;
   align-items: center;
@@ -104,14 +120,14 @@
   margin-bottom: 10px;
 }
 
-.add-remove-icon {
+.cart-icons {
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid #e8e8e1;
+  border: 1px solid var(--border-primary);
 }
 
-.add-remove-icon > button {
+.cart-icons > button {
   background-color: white;
   border: none;
   outline: none;
@@ -121,13 +137,14 @@
   justify-content: center;
 }
 
-.add-remove-icon > h4 {
-  font-size: 16px;
+.cart-icons > span {
+  font-size: 1rem;
   font-weight: 400;
   padding: 0px 15px;
+  color: var(--text-primary);
 }
 
-.cart-third-box {
+.cart-footer-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -140,56 +157,62 @@
   justify-content: space-between;
 }
 
-.cart-price > h3 {
-  font-size: 17px;
+.cart-price > span {
+  font-size: 1.063rem;
   font-weight: 400;
+  color: var(--text-primary);
 }
 
-.cart-third-box > p {
-  font-size: 13px;
+.cart-footer-container > p {
+  font-size: 0.813rem;
   margin: 10px 0px;
+  color: var(--text-primary);
 }
 
-.cart-third-box > button {
+.cart-product-checkout {
   width: 100%;
-  padding: 10px 0px;
-  font-size: 16px;
-  border: none;
-  background-color: black;
-  color: white;
-  border-radius: 5px;
+  height: 40px;
+  font-size: 1rem;
+  background-color: var(--text-primary);
+  color: var(--background-primary);
+  cursor: default;
+  /* font-weight: 600; */
+}
+
+.cart-product-checkout.active {
+  cursor: pointer;
 }
 
 @media only screen and (max-width: 910px) {
-  .cart-second-box::-webkit-scrollbar {
+  .cart-product-container::-webkit-scrollbar {
     display: none;
   }
 }
 
 @media only screen and (max-width: 500px) {
-  .cart-main-box {
+  .cart-right-container {
     width: 100%;
   }
 }
 
 @media only screen and (max-width: 390px) {
-  .cart-main-box {
+  .cart-right-container {
     padding: 20px;
   }
 
-  .cart-second-box {
+  .cart-product-container {
     height: 65%;
   }
 
-  .cart-image-product-details > img {
+  .cart-product-left > img {
     width: 105px;
   }
 
-  .cart-product-details {
+  .cart-product-right {
     margin-left: 10px;
   }
 
-  .cart-product-details > a > h3 {
-    font-size: 15px;
+  .cart-product-right > a > h3 {
+    font-size: 0.938rem;
   }
 }
