--- a/src/components/HomePage/Card/style.css
+++ b/src/components/HomePage/Card/style.css
@@ -1,21 +1,15 @@
 .menwomencard-container {
-  margin-bottom: 30px;
+  margin: 30px 0px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.menwomencard-container > h2 {
-  margin-top: 20px;
-  font-weight: 500;
-}
-
 .menwomencard-box {
   width: 100%;
   display: flex;
   justify-content: space-evenly;
-  margin-top: 20px;
 }
 
 .card {
@@ -23,7 +17,7 @@
   height: 400px;
   position: relative;
   overflow: hidden;
-  box-shadow: 0px 0px 8px 2px rgb(163, 163, 163);
+  box-shadow: var(--shadow-primary);
   border-radius: 12px;
 }
 
@@ -47,6 +41,10 @@
   transition: 0.5s ease-in-out;
 }
 
+.card-content > a {
+  color: #000000;
+}
+
 .card-content.left {
   left: 5%;
 }
@@ -58,10 +56,6 @@
 .card-heading > a > h2 {
   font-weight: 500;
   font-size: 25px;
-}
-
-a {
-  color: black;
 }
 
 @media only screen and (max-width: 910px) {
