--- a/src/components/HomePage/HeadingAndParagraph/style.css
+++ b/src/components/HomePage/HeadingAndParagraph/style.css
@@ -1,56 +1,57 @@
 .heading-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
 }
 
 .heading {
-    font-size: 25px;
-    font-weight: 500;
+  font-size: 25px;
+  font-weight: 500;
+  color: var(--text-primary);
 }
 
 .heading-border {
-    border: 1px solid #FF0000;
-    width: 70px;
-    margin-top: 5px;
+  border: 1px solid var(--primary-color);
+  width: 70px;
+  margin-top: 5px;
 }
 
 .paragraph {
+  font-size: 17px;
+  margin-top: 1px;
+  color: var(--text-primary);
+}
+
+@media screen and (max-width: 768px) {
+  .heading {
+    font-size: 20px;
+  }
+
+  .paragraph {
     font-size: 17px;
-    margin-top: 1px;
+    margin-top: 4px;
+  }
 }
 
+@media screen and (max-width: 500px) {
+  .heading-border {
+    width: 40px;
+    margin-top: 0px;
+  }
 
-@media screen and (max-width:768px) {
-    .heading {
-        font-size: 20px;
-    }
-
-    .paragraph {
-        font-size: 17px;
-        margin-top: 4px;
-    }
+  .paragraph {
+    font-size: 16px;
+  }
 }
 
-@media screen and (max-width:500px) {
-    .heading-border {
-        width: 40px;
-        margin-top: 0px;
-    }
+@media screen and (max-width: 350px) {
+  .heading {
+    font-size: 17px;
+  }
 
-    .paragraph {
-        font-size: 16px;
-    }
-}
-
-@media screen and (max-width:350px) {
-    .heading {
-        font-size: 17px;
-    }
-
-    .heading-border {
-        width: 30px;
-        margin-top: 0px;
-    }
+  .heading-border {
+    width: 30px;
+    margin-top: 0px;
+  }
 }
