--- a/src/components/HomePage/TopTrending/style.css
+++ b/src/components/HomePage/TopTrending/style.css
@@ -1,54 +1,57 @@
 .trending-button-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
 }
 
 .trending-toggle-button {
-    width: 160px;
-    padding: 6px;
-    font-size: 16px;
-    border: none;
-    border-radius: 20px;
-    cursor: pointer;
-    background-color: #EFEFEF;
+  width: 160px;
+  padding: 6px;
+  font-size: 16px;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  background-color: var(--secondary-color);
 }
 
 .trending-toggle-button:hover {
-    color: white;
-    background-color: #030342;
+  color: white;
+  background-color: var(--primary-color);
+}
+
+.trending-toggle-button.active {
+  color: white;
+  background-color: var(--primary-color);
 }
 
 .trending-product-images {
+  width: 250px;
+  height: 300px;
+  object-fit: cover;
+  box-shadow: var(--shadow-primary);
+  margin-bottom: 20px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+@media screen and (max-width: 500px) {
+  .trending-product-images {
+    width: 190px;
+    height: 230px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .trending-product-images {
+    width: 180px;
+    height: 230px;
+  }
+}
+
+@media screen and (max-width: 385px) {
+  .trending-product-images {
     width: 250px;
     height: 300px;
-    object-fit: cover;
-    border: 1px solid #f8f8f8;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-    margin-bottom: 20px;
-    border-radius: 10px;
-    overflow: hidden;
-}
-
-
-@media screen and (max-width:500px) {
-    .trending-product-images {
-        width: 190px;
-        height: 230px;
-    }
-}
-
-@media screen and (max-width:400px) {
-    .trending-product-images {
-        width: 180px;
-        height: 230px;
-    }
-}
-
-@media screen and (max-width:385px) {
-    .trending-product-images {
-        width: 250px;
-        height: 300px;
-    }
+  }
 }
