--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -12,8 +12,8 @@
 .navbar {
   width: 100%;
   height: 80px;
-  background: #fff;
-  box-shadow: 0 0 16px rgb(0 0 0 / 15%);
+  background: var(--background-primary);
+  box-shadow: var(--shadow-primary);
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -36,7 +36,6 @@
 }
 
 .navbar-link {
-  /* margin: 0px 15px; */
   font-size: 14px;
   font-weight: 500;
   text-transform: uppercase;
@@ -44,19 +43,19 @@
 
 .navbar-link > a {
   text-decoration: none;
-  color: #1e1e27;
+  color: var(--text-primary);
 }
 
 .navbar-link > a:hover {
-  color: var(--secondary-color);
+  color: var(--primary-color);
 }
 
 .nav-link-class {
-  border-bottom: 1px solid var(--secondary-color);
+  border-bottom: 1px solid var(--primary-color);
 }
 
 .navbar_search_bar {
-  border: 1px solid var(--tertiary-color);
+  border: 1px solid var(--border-primary);
   border-radius: 20px;
   overflow: hidden;
   display: flex;
@@ -69,10 +68,16 @@
 .navbar_search_bar > input {
   width: 100%;
   border: none;
-  background-color: #fff;
-  /* padding: 10px; */
+  background-color: var(--background-primary);
+  color: var(--text-primary);
   font-size: 17px;
   outline: none;
+}
+
+.navbar_search_icon {
+  font-size: 25px;
+  color: var(--text-primary);
+  cursor: pointer;
 }
 
 .navbar_search_item {
@@ -83,6 +88,9 @@
 
 .navbar_search_bar_icon {
   display: none;
+  color: var(--text-primary);
+  font-size: 1.25rem;
+  cursor: pointer;
 }
 
 .navbar-icons {
@@ -106,7 +114,7 @@
   justify-content: center;
   position: relative;
   border-radius: 50%;
-  background: #eceff6;
+  background: var(--secondary-color);
   width: 40px;
   height: 40px;
 }
@@ -121,21 +129,17 @@
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  background: var(--secondary-color);
+  background: var(--primary-color);
   font-size: 12px;
   font-weight: 700;
-  color: white;
-}
-
-a {
-  text-decoration: none;
-  color: black;
+  color: #ffffff;
 }
 
 .menu-icon {
   display: none;
   margin-left: 10px;
   cursor: pointer;
+  color: var(--text-primary);
 }
 
 .search-field {
@@ -149,13 +153,14 @@ a {
   z-index: 2;
   padding: 0px 20px;
   box-sizing: border-box;
-  background-color: #fff;
+  background-color: var(--background-primary);
 }
 
 .search-field > input {
   width: 100%;
   border: none;
-  background-color: #fff;
+  background-color: var(--background-primary);
+  color: var(--text-primary);
   font-size: 18px;
   outline: none;
 }
@@ -213,7 +218,7 @@ a {
 /* media query for mobile */
 @media only screen and (max-width: 950px) {
   .navbar-item {
-    background-color: #fff;
+    background-color: var(--background-primary);
     z-index: 5;
     display: flex;
     flex-direction: column;
@@ -235,13 +240,13 @@ a {
 
   .navbar-link {
     width: 100%;
-    border-bottom: 1px solid #e4e4e4;
+    border-bottom: 1px solid var(--border-primary);
     font-size: 20px;
     font-weight: 400;
     padding: 15px 0px;
     padding-left: 20px;
     text-transform: capitalize;
-    color: #1e1e27;
+    color: var(--text-primary);
   }
 
   .nav-link-class {
@@ -257,6 +262,7 @@ a {
     display: block;
     margin: 20px;
     font-size: 1.5rem;
+    color: var(--text-primary);
   }
 
   .navbar_search_bar {
