--- a/src/components/PlaceOrderProcess/Payment/style.css
+++ b/src/components/PlaceOrderProcess/Payment/style.css
@@ -1,17 +1,23 @@
 .payment_container {
   width: 100%;
-  background-color: #fff;
+  background-color: var(--background-primary);
   box-shadow: 0px 5px 15px -8px rgba(0, 0, 0, 0.1);
   /* box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px; */
   margin-top: 80px;
   border-radius: 20px;
-  border: 1px solid #e8e8e1;
+  border: 1px solid var(--border-primary);
   padding: 20px;
 }
 
+[data-theme='dark'] .payment_container {
+  border: none;
+  box-shadow: var(--shadow-primary);
+}
+
 .payment_container > h2 {
-  font-size: 22px;
+  font-size: 1.375rem;
   font-weight: 400;
+  color: var(--text-primary);
 }
 
 .payment_method_container {
@@ -19,8 +25,8 @@
 }
 
 .payment_method_container > span {
-  font-size: 18px;
-  color: var(--tertiary-color);
+  font-size: 1.125rem;
+  color: var(--text-secondary);
 }
 
 .payment_method {
@@ -30,36 +36,33 @@
 }
 
 .payment_method > label {
-  font-size: 18px;
+  font-size: 1.125rem;
+  color: var(--text-primary);
 }
 
-.payment_placeOrder_btn {
+.payment_placeOrder_btn_container {
   text-align: right;
   margin-top: 20px;
 }
 
-.payment_placeOrder_btn > button {
+.payment_placeOrder_btn {
   width: 150px;
-  padding: 5px;
-  border-radius: 10px;
-  font-size: 18px;
-  background-color: #60a5fa;
+  font-size: 1.125rem;
+  background-color: var(--tertiary-color);
   color: #fff;
-  border: none;
-  cursor: pointer;
 }
 
 @media only screen and (max-width: 1400px) {
   .payment_container > h2 {
-    font-size: 20px;
+    font-size: 1.25rem;
   }
 
   .payment_method_container > span {
-    font-size: 16px;
+    font-size: 1rem;
   }
 
   .payment_method > label {
-    font-size: 16px;
+    font-size: 1rem;
   }
 }
 
