--- a/src/components/Preview/Sizes/style.css
+++ b/src/components/Preview/Sizes/style.css
@@ -1,32 +1,34 @@
-.preview-size-button-box{
-    display: flex;
-    align-items: center;
-    justify-content:flex-start;
-    padding: 10px 0px;
+.preview-size-button-box {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 10px 0px;
 }
 
-.preview-size-button{
-    transition: all 0.3s linear;
-    width: 40px;
-    border: 1px solid black;
-    background-color: #faf9f8;
-    font-weight: 600;
-    padding: 10px;
-    margin-right: 10px;
-    cursor: pointer;
+.preview-size-button {
+  transition: all 0.3s linear;
+  width: 40px;
+  border: 1px solid var(--text-primary);
+  background-color: #ffffff;
+  font-weight: 600;
+  padding: 10px;
+  margin-right: 10px;
+  cursor: pointer;
 }
 
-.preview-size-button:hover{
-    transition: all 0.3s linear;
-    background-color: black;
-    color: #faf9f8;
+.preview-size-button:hover {
+  transition: all 0.3s linear;
+  background-color: #000000;
+  color: #ffffff;
 }
 
-.background-color-black{
-    background-color: black;
-    color: #faf9f8;
+.background-color-black {
+  background-color: #000000;
+  color: #ffffff;
 }
 
-.preview-size-detail-box{
-    line-height: 20px;
+.preview-size-detail-box {
+  line-height: 20px;
+  font-size: 1rem;
+  color: var(--text-primary);
 }
