--- a/src/components/Profile/AddressForm/style.css
+++ b/src/components/Profile/AddressForm/style.css
@@ -2,7 +2,8 @@
   /* border: 1px solid black; */
   width: 430px;
   height: 95%;
-  background-color: white;
+  background-color: var(--background-primary);
+  box-shadow: var(--shadow-primary);
   border-radius: 15px;
   padding: 20px;
   position: absolute;
@@ -28,15 +29,20 @@
 }
 
 .address-form::-webkit-scrollbar-thumb:hover {
-  background: #000;
+  background: var(--text-primary);
+}
+
+.input-locality-icon {
+  color: var(--text-primary);
+  margin-left: -18px;
 }
 
 .address-form-show-locality-box {
   position: absolute;
   display: flex;
   flex-direction: column;
-  background-color: white;
-  border: 1px solid #d4d4d9;
+  background-color: var(--background-primary);
+  border: 1px solid var(--border-primary);
   padding: 10px;
   width: 100%;
   height: 200px;
@@ -60,6 +66,8 @@
 .address-form-show-locality {
   margin: 2px 0px;
   cursor: pointer;
+  font-family: 1rem;
+  color: var(--text-primary);
 }
 
 .address-form-buttons {
@@ -69,19 +77,17 @@
 
 .address-form-buttton {
   width: 150px;
-  height: 30px;
-  font-size: 15px;
+  font-size: 1rem;
   margin-right: 10px;
   margin-top: 10px;
-  border: none;
-  border-radius: 4px;
-  background-color: #ff0000;
-  color: white;
-  cursor: pointer;
+  padding: 8px;
+  background-color: var(--primary-color);
+  color: #ffffff;
 }
 
-#disable-add-address-button {
+.disable-add-address-button {
   color: #c1c1c1;
+  cursor: not-allowed;
 }
 
 @media only screen and (max-width: 500px) {
