--- a/src/components/Profile/User/style.css
+++ b/src/components/Profile/User/style.css
@@ -1,22 +1,34 @@
-.profile-main-box {
-  background-color: white;
+.profile-container {
+  background-color: var(--background-primary);
   padding-bottom: 10px;
 }
 
-.profile-detail-main-box {
+.profile-top {
+  padding-top: 15px;
+  display: flex;
+}
+
+.profile-heading {
+  flex: 1;
+  text-align: center;
+  font-weight: 400;
+  color: var(--text-primary);
+}
+
+.profile-user-container {
   margin: 20px 30px;
   display: flex;
   align-items: flex-end;
   /* text-transform: capitalize; */
 }
 
-.profile-picture-box {
+.profile-user-image-container {
   width: 140px;
   height: 140px;
   position: relative;
 }
 
-.profile-edit-icon {
+.profile-user-edit-icon {
   position: absolute;
   right: 59px;
   bottom: 5px;
@@ -25,37 +37,40 @@
   cursor: pointer;
 }
 
-.profile-detail-box {
+.profile-user-detail-container {
   display: flex;
   flex-direction: column;
   gap: 1px;
   margin-left: 15px;
 }
 
-.profile-name-box {
+.profile-user-name {
   font-weight: 600;
-  font-size: 25px;
+  font-size: 1.5rem;
   text-transform: capitalize;
+  color: var(--text-primary);
+}
+
+.profile-user-details {
+  color: var(--text-primary);
+  font-size: 1.125rem;
 }
 
 .profile-user-button {
   width: 110px;
-  height: 27px;
-  margin-top: 5px;
-  cursor: pointer;
-  border: 1px solid #e4e4e4;
-  border-radius: 5px;
+  margin-top: 6px;
+  background-color: var(--secondary-color);
+  font-size: 1rem;
 }
 
 .profile-user-button:hover {
-  background-color: rgb(213, 212, 212);
+  background-color: var(--primary-color);
+  color: #ffffff;
 }
 
-.profile-main-features-box {
-  border: 1px solid #e4e4e4;
-}
-
-.profile-main-features-ul {
+.profile-tab-container {
+  border-top: 1px solid var(--border-primary);
+  border-bottom: 1px solid var(--border-primary);
   list-style: none;
   display: flex;
   justify-content: center;
@@ -63,72 +78,73 @@
   padding: 0px 10px;
 }
 
-.profile-main-features-ul > li {
+.profile-tab-container > li {
   display: contents;
 }
 
-.profile-main-features-ul > li > a {
+.profile-tab {
   padding: 8px 20px;
   cursor: pointer;
+  color: var(--text-primary);
 }
 
-.profile-main-features-ul > li > a:hover {
-  background-color: var(--secondary-color);
-  color: white;
+.profile-tab:hover {
+  background-color: var(--primary-color);
+  color: #ffffff;
 }
 
 .active-tab {
-  background-color: var(--secondary-color);
-  color: white;
+  background-color: var(--primary-color);
+  color: #ffffff;
 }
 
 /* media query */
 
 @media only screen and (max-width: 600px) {
-  .profile-main-features-ul > li {
+  .profile-tab-container > li {
     font-size: 15px;
   }
 }
 
 @media only screen and (max-width: 700px) {
-  .profile-main-features-ul {
+  .profile-tab-container {
     justify-content: left;
     overflow-x: scroll;
     white-space: nowrap;
   }
 
-  .profile-main-features-ul::-webkit-scrollbar {
+  .profile-tab-container::-webkit-scrollbar {
     display: none;
   }
 }
 
 @media only screen and (max-width: 500px) {
-  .profile-detail-main-box {
+  .profile-user-container {
     margin: 20px 10px;
     flex-direction: column;
     align-items: flex-start;
   }
 
-  .profile-edit-icon {
+  .profile-user-image-container {
+    width: 120px;
+    height: 120px;
+  }
+
+  .profile-user-edit-icon {
     right: 48px;
   }
 
-  .profile-detail-box {
+  .profile-user-detail-container {
     margin-left: 5px;
     margin-top: 10px;
     gap: 3px;
   }
 
-  .profile-picture-box {
-    width: 120px;
-    height: 120px;
+  .profile-user-name {
+    font-size: 1.25rem;
   }
 
-  .profile-name-box {
-    font-size: 20px;
-  }
-
-  .profile-details {
-    font-size: 16px;
+  .profile-user-details {
+    font-size: 1rem;
   }
 }
