--- a/src/components/Review/allReviews/style.css
+++ b/src/components/Review/allReviews/style.css
@@ -1,65 +1,81 @@
-.review-main-box {
-  padding: 0px 20px;
-  width: 60%;
-  margin: 40px 0px 10px 0px;
+.review-container {
+  padding: 40px 20px;
+  width: 100%;
+  background-color: var(--background-primary);
 }
 
-.review-box_2 {
+.review-sub-container {
+  width: 60%;
+}
+
+.review-header {
   display: flex;
   justify-content: space-between;
   margin-bottom: 10px;
   padding-bottom: 10px;
-  border-bottom: 1px solid rgb(212, 212, 212);
+  border-bottom: 1px solid var(--border-primary);
 }
 
-.review-box_2 > h2 {
+.review-heading {
   font-weight: 400;
+  font-size: 1.5rem;
+  color: var(--text-primary);
 }
 
-.review-box_2 > button {
+.review-btn {
   width: 150px;
   font-size: 15px;
   border: none;
   outline: none;
-  background-color: var(--secondary-color);
+  background-color: var(--primary-color);
   color: white;
   cursor: pointer;
   border-radius: 5px;
 }
 
-.review-show-box {
+.review-detail-container {
   display: grid;
   grid-template-columns: 200px 2fr;
   padding: 10px 10px 10px 0px;
-  border-bottom: 1px solid rgb(212, 212, 212);
+  border-bottom: 1px solid var(--border-primary);
 }
 
-.review-user-name {
+.review-user-container {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.review-user-name > h5 {
+.review-text {
   font-weight: 400;
   margin-top: 5px;
+  font-size: 0.813rem;
+  color: var(--text-primary);
 }
 
-.review-user-name > h4,
-.review-star > span {
-  color: rgb(15, 3, 3);
+.review-user-name {
+  color: var(--text-primary);
   font-weight: 500;
+  font-size: 1rem;
 }
 
-.review-message {
+.review-message-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-.review-message > h4 {
+.review-date {
+  font-weight: 500;
+  font-size: 1rem;
+  color: var(--text-primary);
+}
+
+.review-msg {
   margin-top: 5px;
   font-weight: 400;
+  font-size: 1rem;
+  color: var(--text-primary);
 }
 
 .review-star {
@@ -68,41 +84,41 @@
 }
 
 @media only screen and (max-width: 910px) {
-  .review-main-box {
+  .review-sub-container {
     width: 80%;
   }
 }
 
 @media only screen and (max-width: 769px) {
-  .review-main-box {
+  .review-sub-container {
     width: 100%;
   }
 
-  .review-show-box {
+  .review-detail-container {
     grid-template-columns: 150px 2fr;
   }
 }
 
 @media only screen and (max-width: 500px) {
-  .review-main-box {
+  .review-container {
     padding: 0px 20px;
   }
 
-  .review-box_2 > h2 {
+  .review-heading {
     font-size: 18px;
   }
 
-  .review-box_2 > button {
+  .review-btn {
     width: 120px;
     padding: 5px 0px;
   }
 
-  .review-show-box {
+  .review-detail-container {
     display: flex;
     flex-direction: column;
   }
 
-  .review-user-name {
+  .review-user-container {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -111,11 +127,11 @@
 }
 
 @media only screen and (max-width: 310px) {
-  .review-box_2 > h2 {
+  .review-heading {
     font-size: 17px;
   }
 
-  .review-box_2 > button {
+  .review-btn {
     width: 100px;
     padding: 5px 0px;
   }
