--- a/src/components/SearchResults/style.css
+++ b/src/components/SearchResults/style.css
@@ -1,31 +1,46 @@
 .searchResult_ul_container {
   display: flex;
   flex-direction: column;
-  background-color: #eaeaec;
+  background-color: var(--background-primary);
   border-radius: 10px;
   width: 100%;
   max-height: 300px;
   overflow-y: scroll;
   overflow-x: hidden;
+  box-shadow: var(--shadow-primary);
 }
 
 .searchResult_ul_container::-webkit-scrollbar {
   display: none;
 }
 
-.searchResult_li {
+.searchResult_ul_container > li {
+  display: contents;
+}
+
+.searchResult_li_a {
   font-size: 17px;
   padding: 10px;
   cursor: pointer;
+  color: var(--text-primary);
 }
 
-.searchResult_li:hover {
-  background-color: aliceblue;
+.searchResult_li_a:hover {
+  background-color: var(--secondary-color);
+}
+
+[data-theme='dark'] .searchResult_li_a:hover,
+[data-theme='dark'] .searchResult_li_a_active {
+  color: #000000;
+}
+
+.searchResult_li_a_active {
+  background-color: var(--secondary-color);
 }
 
 /* media queries */
 @media only screen and (max-width: 1400px) {
-  .searchResult_li {
+  .searchResult_li_a {
     font-size: 15px;
   }
 }
