--- a/src/pages/account/style.css
+++ b/src/pages/account/style.css
@@ -7,10 +7,11 @@
 }
 
 .form-sub-container {
-  background-color: white;
+  background-color: var(--background-primary);
   width: 350px;
   padding: 25px 30px;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  /* box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px; */
+  box-shadow: var(--shadow-primary);
   border-radius: 12px;
   display: flex;
   flex-direction: column;
@@ -36,17 +37,41 @@
 .input-container input {
   padding: 7px;
   width: 100%;
-  border: 1px solid rgb(217 216 216);
-  border-radius: 4px;
+  border: 1px solid var(--border-primary);
+  background-color: var(--background-primary);
+  color: var(--text-primary);
+  border-radius: 5px;
   outline: none;
   font-size: 1rem;
 }
 
-.form-sub-container > h5 {
+.input-container > label {
+  color: var(--text-primary);
+}
+
+[data-theme='dark']
+  .input-container
+  > input[type='date']::-webkit-calendar-picker-indicator {
+  filter: invert(1);
+}
+
+.form-btn {
+  width: 100%;
+  background-color: var(--tertiary-color);
+  color: #ffffff;
+  font-size: 1.25rem;
+}
+
+.form-btn.verify-form-btn {
+  width: 150px;
+}
+
+.form-sub-container > p {
   text-align: center;
   margin: 10px 0px;
   font-weight: 500;
   font-size: 1.0625rem;
+  color: var(--text-primary);
 }
 
 .form-sub-container > span {
@@ -59,6 +84,7 @@
   right: 10px;
   cursor: pointer;
   font-size: 1.0625rem;
+  color: var(--text-primary);
 }
 
 .checkbox {
