--- a/src/components/Profile/AddressForm/style.css
+++ b/src/components/Profile/AddressForm/style.css
@@ -1,7 +1,7 @@
 .address-form {
   /* border: 1px solid black; */
   width: 430px;
-  height: 95%;
+  max-height: 95%;
   background-color: var(--background-primary);
   box-shadow: var(--shadow-primary);
   border-radius: 15px;
